[package]
name = "portscan"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "2"
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }